Update Pathway selection and network file creation.ipynb

--- a/Jupyter - Pathway selection network file creation/Pathway selection and network file creation.ipynb
+++ b/Jupyter - Pathway selection network file creation/Pathway selection and network file creation.ipynb
@@ -134,7 +134,7 @@
    "outputs": [],
    "source": [
     "# load in gene list associated with inflammation\n",
-    "infl <- as.data.frame(read.table(file.path(getwd(), \"genes\", \"merged_infl_genes.txt\"), header = T, sep = \"\\t\", stringsAsFactors = FALSE))\n",
+    "infl <- as.data.frame(read.table(file.path(getwd(), \"genes\", \"merged_infl_genes_list.txt\"), header = T, sep = \"\\t\", stringsAsFactors = FALSE))\n",
     "infl <- as.data.frame(infl[,c(-1,-3,-4)])\n",
     "colnames(infl)[1] <- \"entrezgene\""
    ]
