updated scripts and results

--- a/Jupyter - Pathway selection network file creation/Pathway selection and network file creation.ipynb
+++ b/Jupyter - Pathway selection network file creation/Pathway selection and network file creation.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -42,22 +42,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "'C:/Users/Laurent/Untitled Folder'"
+       "'C:/Users/Laurent/Documents/GitHub/inflammation_networks2/Jupyter - Pathway selection network file creation'"
       ],
       "text/latex": [
-       "'C:/Users/Laurent/Untitled Folder'"
+       "'C:/Users/Laurent/Documents/GitHub/inflammation\\_networks2/Jupyter - Pathway selection network file creation'"
       ],
       "text/markdown": [
-       "'C:/Users/Laurent/Untitled Folder'"
+       "'C:/Users/Laurent/Documents/GitHub/inflammation_networks2/Jupyter - Pathway selection network file creation'"
       ],
       "text/plain": [
-       "[1] \"C:/Users/Laurent/Untitled Folder\""
+       "[1] \"C:/Users/Laurent/Documents/GitHub/inflammation_networks2/Jupyter - Pathway selection network file creation\""
       ]
      },
      "metadata": {},
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,9 +117,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in readLines(file):\n",
+      "\"incomplete final line found on 'C:/Users/Laurent/Documents/GitHub/inflammation_networks2/Jupyter - Pathway selection network file creation/databases/wikipathways-combined_final.gmt'\""
+     ]
+    }
+   ],
    "source": [
     "### WikiPathways\n",
     "wp <- read.gmt(file.path(getwd(), \"databases\", \"wikipathways-combined_final.gmt\"))\n",
@@ -129,14 +138,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>entrezgene</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>50616</td></tr>\n",
+       "\t<tr><td> 1236</td></tr>\n",
+       "\t<tr><td>  847</td></tr>\n",
+       "\t<tr><td> 6647</td></tr>\n",
+       "\t<tr><td> 5327</td></tr>\n",
+       "\t<tr><td>  361</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|l}\n",
+       " entrezgene\\\\\n",
+       "\\hline\n",
+       "\t 50616\\\\\n",
+       "\t  1236\\\\\n",
+       "\t   847\\\\\n",
+       "\t  6647\\\\\n",
+       "\t  5327\\\\\n",
+       "\t   361\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| entrezgene |\n",
+       "|---|\n",
+       "| 50616 |\n",
+       "|  1236 |\n",
+       "|   847 |\n",
+       "|  6647 |\n",
+       "|  5327 |\n",
+       "|   361 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  entrezgene\n",
+       "1 50616     \n",
+       "2  1236     \n",
+       "3   847     \n",
+       "4  6647     \n",
+       "5  5327     \n",
+       "6   361     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# load in gene list associated with inflammation\n",
-    "infl <- as.data.frame(read.table(file.path(getwd(), \"genes\", \"merged_infl_genes_list.txt\"), header = T, sep = \"\\t\", stringsAsFactors = FALSE))\n",
+    "infl <- as.data.frame(read.table(file.path(getwd(), \"genes\", \"merged_infl_genes.txt\"), header = T, sep = \"\\t\", stringsAsFactors = FALSE))\n",
     "infl <- as.data.frame(infl[,c(-1,-3,-4)])\n",
-    "colnames(infl)[1] <- \"entrezgene\""
+    "colnames(infl)[1] <- \"entrezgene\"\n",
+    "head(infl)"
    ]
   },
   {
@@ -150,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,72 +445,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th></th><th scope=col>pathway</th><th scope=col>entrezgene</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>7430</th><td>KEGG_NOD_LIKE_RECEPTOR_SIGNALING_PATHWAY</td><td>7205                                    </td></tr>\n",
+       "\t<tr><th scope=row>7431</th><td>KEGG_NOD_LIKE_RECEPTOR_SIGNALING_PATHWAY</td><td>841                                     </td></tr>\n",
+       "\t<tr><th scope=row>7432</th><td>KEGG_NOD_LIKE_RECEPTOR_SIGNALING_PATHWAY</td><td>1147                                    </td></tr>\n",
+       "\t<tr><th scope=row>7433</th><td>KEGG_NOD_LIKE_RECEPTOR_SIGNALING_PATHWAY</td><td>257397                                  </td></tr>\n",
+       "\t<tr><th scope=row>7434</th><td>KEGG_NOD_LIKE_RECEPTOR_SIGNALING_PATHWAY</td><td>2919                                    </td></tr>\n",
+       "\t<tr><th scope=row>7435</th><td>KEGG_NOD_LIKE_RECEPTOR_SIGNALING_PATHWAY</td><td>8767                                    </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|ll}\n",
+       "  & pathway & entrezgene\\\\\n",
+       "\\hline\n",
+       "\t7430 & KEGG\\_NOD\\_LIKE\\_RECEPTOR\\_SIGNALING\\_PATHWAY & 7205                                              \\\\\n",
+       "\t7431 & KEGG\\_NOD\\_LIKE\\_RECEPTOR\\_SIGNALING\\_PATHWAY & 841                                               \\\\\n",
+       "\t7432 & KEGG\\_NOD\\_LIKE\\_RECEPTOR\\_SIGNALING\\_PATHWAY & 1147                                              \\\\\n",
+       "\t7433 & KEGG\\_NOD\\_LIKE\\_RECEPTOR\\_SIGNALING\\_PATHWAY & 257397                                            \\\\\n",
+       "\t7434 & KEGG\\_NOD\\_LIKE\\_RECEPTOR\\_SIGNALING\\_PATHWAY & 2919                                              \\\\\n",
+       "\t7435 & KEGG\\_NOD\\_LIKE\\_RECEPTOR\\_SIGNALING\\_PATHWAY & 8767                                              \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| <!--/--> | pathway | entrezgene |\n",
+       "|---|---|---|\n",
+       "| 7430 | KEGG_NOD_LIKE_RECEPTOR_SIGNALING_PATHWAY | 7205                                     |\n",
+       "| 7431 | KEGG_NOD_LIKE_RECEPTOR_SIGNALING_PATHWAY | 841                                      |\n",
+       "| 7432 | KEGG_NOD_LIKE_RECEPTOR_SIGNALING_PATHWAY | 1147                                     |\n",
+       "| 7433 | KEGG_NOD_LIKE_RECEPTOR_SIGNALING_PATHWAY | 257397                                   |\n",
+       "| 7434 | KEGG_NOD_LIKE_RECEPTOR_SIGNALING_PATHWAY | 2919                                     |\n",
+       "| 7435 | KEGG_NOD_LIKE_RECEPTOR_SIGNALING_PATHWAY | 8767                                     |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     pathway                                  entrezgene\n",
+       "7430 KEGG_NOD_LIKE_RECEPTOR_SIGNALING_PATHWAY 7205      \n",
+       "7431 KEGG_NOD_LIKE_RECEPTOR_SIGNALING_PATHWAY 841       \n",
+       "7432 KEGG_NOD_LIKE_RECEPTOR_SIGNALING_PATHWAY 1147      \n",
+       "7433 KEGG_NOD_LIKE_RECEPTOR_SIGNALING_PATHWAY 257397    \n",
+       "7434 KEGG_NOD_LIKE_RECEPTOR_SIGNALING_PATHWAY 2919      \n",
+       "7435 KEGG_NOD_LIKE_RECEPTOR_SIGNALING_PATHWAY 8767      "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# edge table\n",
     "allDatabases <- rbind(kegg, reactome, wp)\n",
-    "edge_table <- as.data.frame(allDatabases[allDatabases$pathway %in% selectedpws$pathway,])"
+    "edge_table <- as.data.frame(allDatabases[allDatabases$pathway %in% selectedpws$pathway,])\n",
+    "head(edge_table)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# cluster pathways together into groups\n",
     "# Allograft rejection\n",
-    "dataSet$Key[dataSet$Key == \"KEGG_ALLOGRAFT_REJECTION\"] <- \"Allograft_rejection\"\n",
-    "dataSet$Key[dataSet$Key == \"Allograft Rejection%WikiPathways_20181110%WP2328%Homo sapiens\"] <- \"Allograft_rejection\"\n",
-    "dataSet$Key[dataSet$Key == \"KEGG_GRAFT_VERSUS_HOST_DISEASE\"] <- \"Allograft_rejection\"\n",
-    "dataSet$Key[dataSet$Key == \"Control of immune tolerance by vasoactive intestinal peptide%WP4484%Homo sapiens\"] <- \"Allograft_rejection\"\n",
-    "dataSet$Key[dataSet$Key == \"Inflammatory Response Pathway%WikiPathways_20181110%WP453%Homo sapiens\"] <- \"Allograft_rejection\"\n",
+    "edge_table$pathway[edge_table$pathway == \"KEGG_ALLOGRAFT_REJECTION\"] <- \"Allograft_rejection\"\n",
+    "edge_table$pathway[edge_table$pathway == \"Allograft Rejection%WikiPathways_20181110%WP2328%Homo sapiens\"] <- \"Allograft_rejection\"\n",
+    "edge_table$pathway[edge_table$pathway == \"KEGG_GRAFT_VERSUS_HOST_DISEASE\"] <- \"Allograft_rejection\"\n",
+    "edge_table$pathway[edge_table$pathway == \"Control of immune tolerance by vasoactive intestinal peptide%WP4484%Homo sapiens\"] <- \"Allograft_rejection\"\n",
+    "edge_table$pathway[edge_table$pathway == \"Inflammatory Response Pathway%WikiPathways_20181110%WP453%Homo sapiens\"] <- \"Allograft_rejection\"\n",
     "\n",
     "# Cytokines\n",
-    "dataSet$Key[dataSet$Key == \"IL-6 signaling pathway%WikiPathways_20181110%WP364%Homo sapiens\"] <- \"Cytokines\"\n",
-    "dataSet$Key[dataSet$Key == \"IL-10 Anti-inflammatory Signaling Pathway%WP4495%Homo sapiens\"] <- \"Cytokines\"\n",
-    "dataSet$Key[dataSet$Key == \"Cytokines and Inflammatory Response%WikiPathways_20181110%WP530%Homo sapiens\"] <- \"Cytokines\"\n",
-    "dataSet$Key[dataSet$Key == \"IL17 signaling pathway%WikiPathways_20181110%WP2112%Homo sapiens\"] <- \"Cytokines\"\n",
-    "dataSet$Key[dataSet$Key == \"Signal transduction through IL1R%WP4496%Homo sapiens\"] <- \"Cytokines\"\n",
-    "dataSet$Key[dataSet$Key == \"ncRNAs involved in STAT3 signaling in hepatocellular carcinoma%WikiPathways_20181110%WP4337%Homo sapiens\"] <- \"Cytokines\"\n",
+    "edge_table$pathway[edge_table$pathway == \"IL-6 signaling pathway%WikiPathways_20181110%WP364%Homo sapiens\"] <- \"Cytokines\"\n",
+    "edge_table$pathway[edge_table$pathway == \"IL-10 Anti-inflammatory Signaling Pathway%WP4495%Homo sapiens\"] <- \"Cytokines\"\n",
+    "edge_table$pathway[edge_table$pathway == \"Cytokines and Inflammatory Response%WikiPathways_20181110%WP530%Homo sapiens\"] <- \"Cytokines\"\n",
+    "edge_table$pathway[edge_table$pathway == \"IL17 signaling pathway%WikiPathways_20181110%WP2112%Homo sapiens\"] <- \"Cytokines\"\n",
+    "edge_table$pathway[edge_table$pathway == \"Signal transduction through IL1R%WP4496%Homo sapiens\"] <- \"Cytokines\"\n",
+    "edge_table$pathway[edge_table$pathway == \"ncRNAs involved in STAT3 signaling in hepatocellular carcinoma%WikiPathways_20181110%WP4337%Homo sapiens\"] <- \"Cytokines\"\n",
     "\n",
     "# Diseases\n",
-    "dataSet$Key[dataSet$Key == \"KEGG_TYPE_I_DIABETES_MELLITUS\"] <- \"Diseases\"\n",
-    "dataSet$Key[dataSet$Key == \"KEGG_ASTHMA\"] <- \"Diseases\"\n",
-    "dataSet$Key[dataSet$Key == \"Lung fibrosis%WikiPathways_20181110%WP3624%Homo sapiens\"] <- \"Diseases\"\n",
-    "dataSet$Key[dataSet$Key == \"KEGG_INTESTINAL_IMMUNE_NETWORK_FOR_IGA_PRODUCTION\"] <- \"Diseases\"\n",
+    "edge_table$pathway[edge_table$pathway == \"KEGG_TYPE_I_DIABETES_MELLITUS\"] <- \"Diseases\"\n",
+    "edge_table$pathway[edge_table$pathway == \"KEGG_ASTHMA\"] <- \"Diseases\"\n",
+    "edge_table$pathway[edge_table$pathway == \"Lung fibrosis%WikiPathways_20181110%WP3624%Homo sapiens\"] <- \"Diseases\"\n",
+    "edge_table$pathway[edge_table$pathway == \"KEGG_INTESTINAL_IMMUNE_NETWORK_FOR_IGA_PRODUCTION\"] <- \"Diseases\"\n",
     "\n",
     "# Immune cell regulation\n",
-    "dataSet$Key[dataSet$Key == \"Cells and Molecules involved in local acute inflammatory response%WP4493%Homo sapiens\"] <- \"Immune_cell_regulation\"\n",
-    "dataSet$Key[dataSet$Key == \"Selective expression of chemokine receptors during T-cell polarization%WP4494%Homo sapiens\"] <- \"Immune_cell_regulation\"\n",
-    "dataSet$Key[dataSet$Key == \"KEGG_LEISHMANIA_INFECTION\"] <- \"Immune_cell_regulation\"\n",
+    "edge_table$pathway[edge_table$pathway == \"Cells and Molecules involved in local acute inflammatory response%WP4493%Homo sapiens\"] <- \"Immune_cell_regulation\"\n",
+    "edge_table$pathway[edge_table$pathway == \"Selective expression of chemokine receptors during T-cell polarization%WP4494%Homo sapiens\"] <- \"Immune_cell_regulation\"\n",
+    "edge_table$pathway[edge_table$pathway == \"KEGG_LEISHMANIA_INFECTION\"] <- \"Immune_cell_regulation\"\n",
     "\n",
     "# NFkB\n",
-    "dataSet$Key[dataSet$Key == \"KEGG_NOD_LIKE_RECEPTOR_SIGNALING_PATHWAY\"] <- \"NFkB\"\n",
-    "dataSet$Key[dataSet$Key == \"REACTOME_TAK1_ACTIVATES_NFKB_BY_PHOSPHORYLATION_AND_ACTIVATION_OF_IKKS_COMPLEX\"] <- \"NFkB\"\n",
-    "dataSet$Key[dataSet$Key == \"REACTOME_TRAF6_MEDIATED_NFKB_ACTIVATION\"] <- \"NFkB\"\n",
-    "dataSet$Key[dataSet$Key == \"REACTOME_RIP_MEDIATED_NFKB_ACTIVATION_VIA_DAI\"] <- \"NFkB\"\n",
-    "dataSet$Key[dataSet$Key == \"Photodynamic therapy-induced NF-kB survival signaling%WikiPathways_20181110%WP3617%Homo sapiens\"] <- \"NFkB\"\n",
-    "dataSet$Key[dataSet$Key == \"Simplified Depiction of MYD88 Distinct Input-Output Pathway%WikiPathways_20181110%WP3877%Homo sapiens\"] <- \"NFkB\"\n",
-    "dataSet$Key[dataSet$Key == \"EBV LMP1 signaling%WikiPathways_20181110%WP262%Homo sapiens\"] <- \"NFkB\"\n",
+    "edge_table$pathway[edge_table$pathway == \"KEGG_NOD_LIKE_RECEPTOR_SIGNALING_PATHWAY\"] <- \"NFkB\"\n",
+    "edge_table$pathway[edge_table$pathway == \"REACTOME_TAK1_ACTIVATES_NFKB_BY_PHOSPHORYLATION_AND_ACTIVATION_OF_IKKS_COMPLEX\"] <- \"NFkB\"\n",
+    "edge_table$pathway[edge_table$pathway == \"REACTOME_TRAF6_MEDIATED_NFKB_ACTIVATION\"] <- \"NFkB\"\n",
+    "edge_table$pathway[edge_table$pathway == \"REACTOME_RIP_MEDIATED_NFKB_ACTIVATION_VIA_DAI\"] <- \"NFkB\"\n",
+    "edge_table$pathway[edge_table$pathway == \"Photodynamic therapy-induced NF-kB survival signaling%WikiPathways_20181110%WP3617%Homo sapiens\"] <- \"NFkB\"\n",
+    "edge_table$pathway[edge_table$pathway == \"Simplified Depiction of MYD88 Distinct Input-Output Pathway%WikiPathways_20181110%WP3877%Homo sapiens\"] <- \"NFkB\"\n",
+    "edge_table$pathway[edge_table$pathway == \"EBV LMP1 signaling%WikiPathways_20181110%WP262%Homo sapiens\"] <- \"NFkB\"\n",
     "\n",
     "# Vitamin B12\n",
-    "dataSet$Key[dataSet$Key == \"Folate Metabolism%WikiPathways_20181110%WP176%Homo sapiens\"] <- \"Vitamin_B12\"\n",
-    "dataSet$Key[dataSet$Key == \"Vitamin B12 Metabolism%WikiPathways_20181110%WP1533%Homo sapiens\"] <- \"Vitamin_B12\"\n",
-    "dataSet$Key[dataSet$Key == \"IL1 and megakaryocytes in obesity%WikiPathways_20181110%WP2865%Homo sapiens\"] <- \"Vitamin_B12\"\n",
+    "edge_table$pathway[edge_table$pathway == \"Folate Metabolism%WikiPathways_20181110%WP176%Homo sapiens\"] <- \"Vitamin_B12\"\n",
+    "edge_table$pathway[edge_table$pathway == \"Vitamin B12 Metabolism%WikiPathways_20181110%WP1533%Homo sapiens\"] <- \"Vitamin_B12\"\n",
+    "edge_table$pathway[edge_table$pathway == \"IL1 and megakaryocytes in obesity%WikiPathways_20181110%WP2865%Homo sapiens\"] <- \"Vitamin_B12\"\n",
     "\n",
     "# Inflammation\n",
-    "dataSet$Key[dataSet$Key == \"Vitamin D in inflammatory diseases%WP4482%Homo sapiens\"] <- \"Inflammation\"\n",
-    "dataSet$Key[dataSet$Key == \"LTF danger signal response pathway%WP4478%Homo sapiens\"] <- \"Inflammation\"\n",
-    "dataSet$Key[dataSet$Key == \"Resistin as a regulator of inflammation%WP4481%Homo sapiens\"] <- \"Inflammation\"\n",
-    "dataSet$Key[dataSet$Key == \"Relationship between inflammation, COX-2 and EGFR%WP4483%Homo sapiens\"] <- \"Inflammation\""
+    "edge_table$pathway[edge_table$pathway == \"Vitamin D in inflammatory diseases%WP4482%Homo sapiens\"] <- \"Inflammation\"\n",
+    "edge_table$pathway[edge_table$pathway == \"LTF danger signal response pathway%WP4478%Homo sapiens\"] <- \"Inflammation\"\n",
+    "edge_table$pathway[edge_table$pathway == \"Resistin as a regulator of inflammation%WP4481%Homo sapiens\"] <- \"Inflammation\"\n",
+    "edge_table$pathway[edge_table$pathway == \"Relationship between inflammation, COX-2 and EGFR%WP4483%Homo sapiens\"] <- \"Inflammation\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,6 +589,14 @@
     "node_table$Type <- \"Gene\"\n",
     "node_table$Type[node_table$nodes %in% infl$entrezgene] <- \"InflGene\"\n",
     "node_table$Type[node_table$nodes %in% selectedpws$pathway] <- \"Process\"\n",
+    "node_table$Type[node_table$nodes == \"Allograft_rejection\"] <- \"Process\"\n",
+    "node_table$Type[node_table$nodes == \"Cytokines\"] <- \"Process\"\n",
+    "node_table$Type[node_table$nodes == \"Diseases\"] <- \"Process\"\n",
+    "node_table$Type[node_table$nodes == \"Immune_cell_regulation\"] <- \"Process\"\n",
+    "node_table$Type[node_table$nodes == \"NFkB\"] <- \"Process\"\n",
+    "node_table$Type[node_table$nodes == \"Vitamin_B12\"] <- \"Process\"\n",
+    "node_table$Type[node_table$nodes == \"Inflammation\"] <- \"Process\"\n",
+    "\n",
     "\n",
     "# save node table\n",
     "write.table(node_table, file.path(getwd(), \"results\", \"node_table.txt\"), col.names = T, row.names = F, sep = \"\\t\", quote = F)"
