--- a/Pathway extension using STRING & Neo4J.ipynb
+++ b/Pathway extension using STRING & Neo4J.ipynb
@@ -1312,7 +1312,7 @@
     "WHERE NOT (source) = (target)\n",
     "RETURN DISTINCT source.id AS source_id, target.id AS target_id, count(neighbor) AS common_neighbors\")\n",
     "\n",
-    "# only extract the 55 added genes via STRING\n",
+    "# only extract the added genes via STRING\n",
     "genes_added <- read.table(file.path(getwd(), \"data-input\", \"genes_added.txt\"), header = T, sep = \"\\t\")\n",
     "\n",
     "colnames(genes_added)[1] <- \"gene\"\n",
