--- a/STRING network creation.ipynb
+++ b/STRING network creation.ipynb
@@ -5,14 +5,14 @@
    "metadata": {},
    "source": [
     "# Automation Cytoscape network creation using RCy3 package\n",
-    "We are going to use the RCy3 package in R to automate the workflow for STRING network creation. We are using multiple gene epxression datasets acquired from different studies. These datasets contain gene expression profiles of patients with various diseases. The diseases which are going to be used in this notebook are: lung-cancer (LC), breast-cancer (BC), metabolically unhealthy obesity (MUO), rheumatoid arthritis (RA), dilated cardiomyopathy (DCM), ishemic cardiomyopathy (ICM) and systemis lupus erythematosus (SLE).\n",
+    "We are going to use the RCy3 package in R to automate the workflow for STRING network creation. We are using multiple gene epxression datasets acquired from different studies. These datasets contain gene expression profiles of patients with various diseases. The diseases which are going to be used in this notebook are: breast-cancer (BC), metabolically unhealthy obesity (MUO), rheumatoid arthritis (RA) and dilated cardiomyopathy (DCM).\n",
     "\n",
     "The network will consist of pathways, pathway clusters and the genes which occur in these pathways. These pathways are acquired based on genes associated with inflammation which were retrieved from DisGeNET and GeneCards."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -301,22 +301,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "'Loaded network \\'String Network - 1\\' with 198 nodes and 886 edges'"
+       "'Loaded network \\'String Network\\' with 198 nodes and 886 edges'"
       ],
       "text/latex": [
-       "'Loaded network \\textbackslash{}'String Network - 1\\textbackslash{}' with 198 nodes and 886 edges'"
+       "'Loaded network \\textbackslash{}'String Network\\textbackslash{}' with 198 nodes and 886 edges'"
       ],
       "text/markdown": [
-       "'Loaded network \\'String Network - 1\\' with 198 nodes and 886 edges'"
+       "'Loaded network \\'String Network\\' with 198 nodes and 886 edges'"
       ],
       "text/plain": [
-       "[1] \"Loaded network 'String Network - 1' with 198 nodes and 886 edges\""
+       "[1] \"Loaded network 'String Network' with 198 nodes and 886 edges\""
       ]
      },
      "metadata": {},
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -482,20 +482,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Fill in for the Automation function y, z and p. \n",
     "# Whereas negLogFC is the negative logFC cutoff, posLogFC is the positive logFC cutoff and pValue is the p-value.\n",
     "pValue <- 0.05\n",
-    "negLogFC <- -0.26\n",
-    "posLogFC <- 0.26"
+    "negLogFC <- -1.00\n",
+    "posLogFC <- 1.00"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
